force-app/main/default/objects/AppLog__c.object
<CustomObject>
    <fields>
        <fullName>AffectedId__c</fullName>
        <description>Id of object(s) related to log event</description>
        <label>Affected Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogLevel__c</fullName>
        <label>LogLevel</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ShortMessage__c</fullName>
        <description>First 255 characters of message. Useful for SOQL WHERE clauses, and possibly GROUP BY</description>
        <label>Short Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <description>Active user</description>
        <label>UserId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>AppLog</label>
    <nameField>
        <label>AppLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AppLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>